# gnome-album-thumbnailer

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac  gnome-album-thumbnailer.c  gnome-album-thumbnailer.doap  gnome-album-thumbnailer.thumbnailer.in  gnome-thumbnailer-skeleton.c
